# password_manager

./: .gitignore  README.md  docker-compose.yml  init_conf.sh  manage.py  pyproject.toml  pytest.ini
app/password_manager/: models.py
app/password_manager/api/: serializers.py  urls.py  views.py
app/password_manager/migrations/: 0001_initial.py
app/password_manager/tests/: conftest.py  test_api.py
config/: settings.py  urls.py
config/api/: urls.py
